Add param to skip reboot.

--- a/roles/base/defaults/main.yml
+++ b/roles/base/defaults/main.yml
@@ -39,5 +39,6 @@ base__kernel_params:
 
 base__disable_firewalld: true
 
+base__skip_reboot: false
 base__reboot_polling_delay: 10
 base__reboot_polling_timeout: 300
