--- a/roles/coredns/tasks/coredns_deployed.yml
+++ b/roles/coredns/tasks/coredns_deployed.yml
@@ -45,9 +45,10 @@
   when: '"NotFound" in _check_result.stderr'
 
 - name: k8s components are ready
-  command: '{{ k8s__k8s_bin_dir }}/kubectl get componentstatuses'
+  command: >-
+    {{ k8s__k8s_bin_dir }}/kubectl get componentstatuses -o jsonpath='{.items[*].conditions[?(@.type=="Healthy")].status}'
   register: _componentstatuses
-  until: _componentstatuses.stdout.find('Unhealthy') == -1
+  until: _componentstatuses.stdout.find('False') == -1
   retries: 5
   delay: 5
   changed_when: false
