--- a/roles/k8s_master/defaults/main.yml
+++ b/roles/k8s_master/defaults/main.yml
@@ -1,10 +1,11 @@
 k8s_master__k8s_bins_download_url_base: https://storage.googleapis.com/kubernetes-release/release/{{ k8s__k8s_version }}/bin/linux/amd64
-k8s_master__kube_apiserver_bin_checksum: sha1:1abc9f8297a099e4d33ebb8b8673b2aaba3082c2
-k8s_master__kube_controller_manager_bin_checksum: sha1:2a302311eb20af77e7346db36f13736e5b7e04ea
-k8s_master__kube_scheduler_bin_checksum: sha1:a5237cdb33e1dd8e851dedbfa87162acea3aa312
-k8s_master__kubectl_bin_checksum: sha1:44a66d74371609c114ef0a296a996b0a20c0702c
-k8s_master__kubeadm_bin_checksum: sha1:4ea4ff2ca6ec1126cc9191dbca45233ad5c1c774
-k8s_master__cloud_controller_manager_bin_checksum: sha1:6c293238fe1b4bc0d55cf11d7a59d76b051542bc
+k8s_master__kube_apiserver_bin_checksum: sha1:bb5fd579bb1bb8b65337152ae6de380383b254a2
+k8s_master__kube_controller_manager_bin_checksum: sha1:521af5f3576be871657598ecbadfe193568f983d
+k8s_master__kube_scheduler_bin_checksum: sha1:eecc85cb2a10f174727abed4694ec005f6815997
+k8s_master__kubectl_bin_checksum: sha1:5507df2e3a531d6b047f2278324eef14f77a3e04
+k8s_master__kubeadm_bin_checksum: sha1:2d0d544584409cdaacbaf203801a9957069df092
+# Kubernetes team has stopped to provide cloud-controller-manager binary since 1.16.0
+# k8s_master__cloud_controller_manager_bin_checksum: sha1:6c293238fe1b4bc0d55cf11d7a59d76b051542bc
 
 k8s_master__pki_dir: /etc/kubernetes/pki
 k8s_master__audit_log_dir: /var/log/kubernetes
@@ -22,14 +23,13 @@ k8s_master__kube_apiserver_audit_log_maxbackup: 3
 k8s_master__kube_apiserver_audit_log_maxsize: 100
 k8s_master__kube_apiserver_audit_log_path: '{{ k8s_master__audit_log_dir }}/kube-audit.log'
 k8s_master__kube_apiserver_bind_address: 0.0.0.0
-k8s_master__kube_apiserver_enable_admission_plugins: NamespaceLifecycle,LimitRanger,ServiceAccount,DefaultStorageClass,DefaultTolerationSeconds,MutatingAdmissionWebhook,ValidatingAdmissionWebhook,ResourceQuota,NodeRestriction,DenyEscalatingExec,StorageObjectInUseProtection,PodSecurityPolicy
+k8s_master__kube_apiserver_enable_admission_plugins: NamespaceLifecycle,LimitRanger,ServiceAccount,DefaultStorageClass,DefaultTolerationSeconds,MutatingAdmissionWebhook,ValidatingAdmissionWebhook,ResourceQuota,NodeRestriction,StorageObjectInUseProtection,PodSecurityPolicy
 k8s_master__kube_apiserver_etcd_compaction_interval: 5m0s
 k8s_master__kube_apiserver_etcd_servers:
   auto_set: true
   # auto_set: false
   # servers: https://127.0.0.1:2379
 k8s_master__kube_apiserver_event_ttl: 1h0m0s
-k8s_master__kube_apiserver_insecure_port: 0
 k8s_master__kube_apiserver_kubelet_preferred_address_types: InternalIP,ExternalIP,Hostname
 k8s_master__kube_apiserver_kubernetes_service_node_port: 0
 k8s_master__kube_apiserver_profiling: 'false'
@@ -50,7 +50,6 @@ k8s_master__kube_controller_manager_node_monitor_grace_period: 40s
 k8s_master__kube_controller_manager_node_monitor_period: 5s
 k8s_master__kube_controller_manager_node_startup_grace_period: 1m0s
 k8s_master__kube_controller_manager_pod_eviction_timeout: 5m0s
-k8s_master__kube_controller_manager_port: 10252
 k8s_master__kube_controller_manager_profiling: 'false'
 k8s_master__kube_controller_manager_secondary_node_eviction_rate: 0.01
 k8s_master__kube_controller_manager_secure_port: 10257
