--- a/roles/k8s_master/tasks/cloud_controller_manager_started.yml
+++ b/roles/k8s_master/tasks/cloud_controller_manager_started.yml
@@ -1,14 +1,14 @@
 - name: cloud-controller-manager unit file exists
   template:
     src: systemd_units/cloud-controller-manager.service.j2
-    dest: /etc/systemd/system/cloud-controller-manager.service
+    dest: /etc/systemd/system/{{ k8s__service_name_prefix }}cloud-controller-manager.service
     owner: root
     group: root
     mode: 0664
 
 - name: cloud-controller-manager is running
   systemd:
-    name: cloud-controller-manager
+    name: '{{ k8s__service_name_prefix }}cloud-controller-manager'
     daemon_reload: true
     enabled: true
     state: started
