--- a/roles/k8s_node/tasks/containerd_started.yml
+++ b/roles/k8s_node/tasks/containerd_started.yml
@@ -67,13 +67,13 @@
   - name: containerd unit file exists
     template:
       src: systemd_units/containerd.service.j2
-      dest: /etc/systemd/system/k8s-containerd.service
+      dest: /etc/systemd/system/{{ k8s__service_name_prefix }}containerd.service
       owner: root
       group: root
       mode: 0664
   - name: containerd is running
     systemd:
-      name: k8s-containerd
+      name: '{{ k8s__service_name_prefix }}containerd'
       daemon_reload: true
       enabled: true
       state: started
