--- a/roles/k8s_node/tasks/kubelet_started.yml
+++ b/roles/k8s_node/tasks/kubelet_started.yml
@@ -26,7 +26,7 @@
 - name: kubelet unit file exists
   template:
     src: systemd_units/kubelet.service.j2
-    dest: /etc/systemd/system/kubelet.service
+    dest: /etc/systemd/system/{{ k8s__service_name_prefix }}kubelet.service
     owner: root
     group: root
     mode: 0664
@@ -41,7 +41,7 @@
 
 - name: kubelet is running
   systemd:
-    name: kubelet
+    name: '{{ k8s__service_name_prefix }}kubelet'
     daemon_reload: true
     enabled: true
     state: started
