--- a/roles/k8s_node/tasks/os_tuned.yml
+++ b/roles/k8s_node/tasks/os_tuned.yml
@@ -1,3 +1,62 @@
+- name: swap off
+  block:
+  - name: swap doesn't exist in fstab
+    mount:
+      path: swap
+      fstype: swap
+      state: absent
+  - name: Check if Azure Linux conf exists
+    stat:
+      path: /etc/waagent.conf
+    register: _stat_result
+  - name: Swap is disabled in Azure Linux conf
+    ini_file:
+      path: /etc/waagent.conf
+      section: null
+      option: ResourceDisk.EnableSwap
+      value: 'n'
+      no_extra_spaces: true
+    when: _stat_result.stat.exists
+  - name: check swap devices
+    command: swapon -s
+    register: swap_devices
+    changed_when: false
+  - name: swapoff -a
+    command: swapoff -a
+    when: swap_devices.stdout != ""
+  when: k8s_node__turn_swap_off
+
+- name: kernel modules
+  block:
+  - name: Required kernel modules are loaded
+    modprobe:
+      name: '{{ item }}'
+      state: present
+    loop: '{{ k8s_node__kernel_modules_to_load }}'
+  - name: Required kernel modules are loaded on boot
+    lineinfile:
+      path: '{{ k8s_node__modules_conf }}'
+      line: '{{ item }}'
+      state: present
+      create: true
+    loop: '{{ k8s_node__kernel_modules_to_load }}'
+
+- name: Kernel modules for IPVS
+  block:
+  - name: Kernel modules for IPVS are loaded
+    modprobe:
+      name: '{{ item }}'
+      state: present
+    loop: '{{ k8s_node__kernel_modules_to_load_for_ipvs }}'
+  - name: Kernel modules for IPVS are loaded on boot
+    lineinfile:
+      path: '{{ k8s_node__modules_conf }}'
+      line: '{{ item }}'
+      state: present
+      create: true
+    loop: '{{ k8s_node__kernel_modules_to_load_for_ipvs }}'
+  when: k8s_node__kube_proxy_mode == 'ipvs'
+
 - name: Kernel parametes are tuned
   sysctl:
     name: '{{ item.name }}'
