--- a/roles/k8s_node/tasks/kubelet_started.yml
+++ b/roles/k8s_node/tasks/kubelet_started.yml
@@ -9,7 +9,7 @@
 
 - name: kubelet lib dir exists
   file:
-    path: /var/lib/kubelet
+    path: '{{ k8s_node__kubelet_root_dir }}'
     owner: root
     group: root
     mode: 0755
