--- a/roles/k8s_node/defaults/main.yml
+++ b/roles/k8s_node/defaults/main.yml
@@ -37,6 +37,7 @@ k8s_node__runc_checksum: sha1:3e1981e48c85eda85a692250ff9fa037465bd809
 
 k8s_node__containerd_bin_dir: /usr/bin
 k8s_node__containerd_conf: /etc/containerd/config.toml
+k8s_node__containerd_log_level: warn
 k8s_node__containerd_root_dir: /var/lib/k8s-containerd
 k8s_node__containerd_state_dir: /run/k8s-containerd
 k8s_node__containerd_opt_dir: /opt/k8s-containerd
