--- a/roles/k8s_node/defaults/main.yml
+++ b/roles/k8s_node/defaults/main.yml
@@ -42,6 +42,9 @@ k8s_node__containerd_root_dir: /var/lib/k8s-containerd
 k8s_node__containerd_state_dir: /run/k8s-containerd
 k8s_node__containerd_opt_dir: /opt/k8s-containerd
 k8s_node__containerd_disable_tcp_service: 'true'
+k8s_node__containerd_registry_mirrors:
+  docker.io:
+  - https://registry-1.docker.io
 k8s_node__containerd_version: 1.3.3
 k8s_node__containerd_archive_download_url_base: https://github.com/containerd/containerd/releases/download/v{{ k8s_node__containerd_version }}/containerd-{{ k8s_node__containerd_version }}.linux-amd64.tar.gz
 k8s_node__containerd_archive_checksum: sha1:22726df8ee4f4a5b30d5e4b5a0f44505ec2ea720
