--- a/roles/k8s_master/tasks/tls_bootstrapping_configured.yml
+++ b/roles/k8s_master/tasks/tls_bootstrapping_configured.yml
@@ -7,6 +7,25 @@
   delay: 5
   changed_when: false
 
+- name: ClusterRoleBinding 'create-csrs-for-bootstrapping' exists
+  command: '{{ k8s__k8s_bin_dir }}/kubectl apply -f -'
+  args:
+    stdin: |
+      apiVersion: rbac.authorization.k8s.io/v1
+      kind: ClusterRoleBinding
+      metadata:
+        name: create-csrs-for-bootstrapping
+      roleRef:
+        apiGroup: rbac.authorization.k8s.io
+        kind: ClusterRole
+        name: system:node-bootstrapper
+      subjects:
+      - apiGroup: rbac.authorization.k8s.io
+        kind: Group
+        name: system:bootstrappers
+  register: _apply_result
+  changed_when: '" created" in _apply_result.stdout or " configured" in _apply_result.stdout'
+
 - name: Auto approval for TLS bootstrapping CSRs
   block:
   - name: ClusterRoleBinding 'auto-approve-csrs-for-group' exists
@@ -27,25 +46,24 @@
           apiGroup: rbac.authorization.k8s.io
     register: _apply_result
     changed_when: '" created" in _apply_result.stdout or " configured" in _apply_result.stdout'
-  - name: ClusterRole 'approve-node-server-renewal-csr' exists
+  - name: ClusterRoleBinding 'auto-approve-renewals-for-nodes' exists
     command: '{{ k8s__k8s_bin_dir }}/kubectl apply -f -'
     args:
       stdin: |
-        kind: ClusterRole
+        kind: ClusterRoleBinding
         apiVersion: rbac.authorization.k8s.io/v1
         metadata:
-          name: approve-node-server-renewal-csr
-        rules:
-        - apiGroups: ['certificates.k8s.io']
-          resources: ['certificatesigningrequests/selfnodeserver']
-          verbs: ['create']
+          name: auto-approve-renewals-for-nodes
+        subjects:
+        - kind: Group
+          name: system:nodes
+          apiGroup: rbac.authorization.k8s.io
+        roleRef:
+          kind: ClusterRole
+          name: system:certificates.k8s.io:certificatesigningrequests:selfnodeclient
+          apiGroup: rbac.authorization.k8s.io
     register: _apply_result
     changed_when: '" created" in _apply_result.stdout or " configured" in _apply_result.stdout'
-    when: k8s__feature_gates is defined and (k8s__feature_gates.RotateKubeletServerCertificate | default(False))
-  - include_tasks: tls_bootstrapping_configured_for_node.yml
-    loop: '{{ hostvars.values() | selectattr("host__is_k8s_node") | map(attribute="ansible_facts.fqdn") | list }}'
-    loop_control:
-      loop_var: _hostname
 
 - name: Bootstrap token
   block:
@@ -62,70 +80,3 @@
     shell: echo {{ _bootstrap_token.stdout }} > {{ k8s__local_shared_dir }}/bootstrap_token
     delegate_to: 127.0.0.1
     when: 'not "name: bootstrap-token-" in _check_result.stdout'
-
-- name: ConfigMap 'cluster-info'
-  block:
-  - name: Check if ConfigMap 'cluster-info' exists
-    shell: '{{ k8s__k8s_bin_dir }}/kubectl -n kube-public get configmap cluster-info || true'
-    register: _check_result
-    changed_when: false
-    failed_when: not 'cluster-info' in _check_result.stdout and not 'cluster-info' in _check_result.stderr
-  - name: ConfigMap 'cluster-info' exists
-    command: '{{ k8s__k8s_bin_dir }}/kubectl -n kube-public create configmap cluster-info --from-file {{ k8s_master__pki_dir }}/ca.crt --from-file {{ k8s_master__kubeconfig_dir }}/bootstrap.kubeconfig'
-    when: '"NotFound" in _check_result.stderr'
-  - name: Role to get cluster-info exists
-    command: '{{ k8s__k8s_bin_dir }}/kubectl apply -f -'
-    args:
-      stdin: |
-        apiVersion: rbac.authorization.k8s.io/v1
-        kind: Role
-        metadata:
-          name: system:bootstrap-signer-clusterinfo
-          namespace: kube-public
-        rules:
-        - apiGroups:
-          - ""
-          resources:
-          - configmaps
-          verbs:
-          - get
-    register: _apply_result
-    changed_when: '" created" in _apply_result.stdout or " configured" in _apply_result.stdout'
-  - name: RoleBinding 'kubeadm:bootstrap-signer-clusterinfo' exists
-    command: '{{ k8s__k8s_bin_dir }}/kubectl apply -f -'
-    args:
-      stdin: |
-        apiVersion: rbac.authorization.k8s.io/v1
-        kind: RoleBinding
-        metadata:
-          name: kubeadm:bootstrap-signer-clusterinfo
-          namespace: kube-public
-        roleRef:
-          apiGroup: rbac.authorization.k8s.io
-          kind: Role
-          name: system:bootstrap-signer-clusterinfo
-        subjects:
-        - apiGroup: rbac.authorization.k8s.io
-          kind: User
-          name: system:anonymous
-    register: _apply_result
-    changed_when: '" created" in _apply_result.stdout or " configured" in _apply_result.stdout'
-
-- name: ClusterRoleBinding 'kubeadm:kubelet-bootstrap' exists
-  command: '{{ k8s__k8s_bin_dir }}/kubectl apply -f -'
-  args:
-    stdin: |
-      apiVersion: rbac.authorization.k8s.io/v1
-      kind: ClusterRoleBinding
-      metadata:
-        name: kubeadm:kubelet-bootstrap
-      roleRef:
-        apiGroup: rbac.authorization.k8s.io
-        kind: ClusterRole
-        name: system:node-bootstrapper
-      subjects:
-      - apiGroup: rbac.authorization.k8s.io
-        kind: Group
-        name: system:bootstrappers
-  register: _apply_result
-  changed_when: '" created" in _apply_result.stdout or " configured" in _apply_result.stdout'
