--- a/roles/k8s_master/tasks/kubeconfigs_generated.yml
+++ b/roles/k8s_master/tasks/kubeconfigs_generated.yml
@@ -112,11 +112,11 @@
   - name: Context is enabled in admin kubeconfig
     command: '{{ k8s__k8s_bin_dir }}/kubectl config use-context {{ _k8s_user }}@{{ k8s__k8s_cluster_name }} --kubeconfig={{ _kubeconfig }}'
     when: not _stat_result.stat.exists
-  - name: Only user 'kube-admin' can read admin kubeconfig
+  - name: Only root can read admin kubeconfig
     file:
       path: '{{ _kubeconfig }}'
-      owner: kube-admin
-      group: kube-admin
+      owner: root
+      group: root
       mode: 0600
   - name: /root/.kube/ exists
     file:
@@ -131,21 +131,6 @@
       src: '{{ _kubeconfig }}'
       owner: root
       group: root
-      mode: 0600
-      state: link
-  - name: /home/kube-admin/.kube exists
-    file:
-      path: /home/kube-admin/.kube
-      owner: kube-admin
-      group: kube-admin
-      mode: 0700
-      state: directory
-  - name: admin kubeconfig is installed for kube-admin
-    file:
-      path: /home/kube-admin/.kube/config
-      src: '{{ _kubeconfig }}'
-      owner: kube-admin
-      group: kube-admin
       mode: 0600
       state: link
 
